# bag_manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
bag_dedupe_tf/src/: bag_dedupe_tf.cpp
bag_merge/: CMakeLists.txt  package.xml
bag_merge/src/: merge_bags.cpp
msgext/: __init__.py  msgext.py
size_info/: size_info.py
src/: bag_dedupe_tf.cpp  merge_bags.cpp
