<?xml version="1.0"?>
<package format="2">
  <name>bag_manager</name>
  <version>0.0.0</version>
  <description>Tools for working with ROS bag files</description>

  <maintainer email="Avery.Munoz@unh.edu">Avery Munoz</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>tf2_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
